[tool.poetry]
name = "random-xmas"
version = "0.1.0"
description = "Randomize gift recipients and send everyone a secret email"
authors = ["Lauri Kovanen <1552040+lkovanen@users.noreply.github.com>"]
license = "MIT license"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.4.2"
requests = "^2.31.0"
email-validator = "^2.1.0.post1"
boto3 = "^1.28.77"
boto3-stubs = "^1.28.83.post1"


[tool.poetry.group.dev.dependencies]
black = "^23.10.1"
ruff = "^0.1.3"
mypy = "^1.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
